--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "gatsby_zanehiredevs_multiple_sources",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "A simplified reproduction for zanehiredevs",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -14,6 +14,10 @@
   },
   "dependencies": {
     "gatsby": "^2.15.15",
+    "gatsby-source-contentful": "^2.1.36",
+    "gatsby-source-filesystem": "^2.1.22",
+    "gatsby-source-graphql": "^2.1.14",
+    "gatsby-transformer-remark": "^2.6.22",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
